fix:解决根目录第一个文件/文件夹不显示问题
解决根目录第一个文件/文件夹不显示问题

--- a/css/fancyindex.css
+++ b/css/fancyindex.css
@@ -120,9 +120,11 @@ html, body {
   background: none;
 }
 
-tbody tr:first-child {
+
+/*tbody tr:first-child {
   display: none;
 }
+*/
 
 tr.e {
   background:#f7f7f7;
